minor bugfix, scrollbar for mobile

--- a/Frontend/Components/src/index.css
+++ b/Frontend/Components/src/index.css
@@ -3,7 +3,7 @@ body {
   width: 100vw;
 }
 
-#root {
+.root {
   background-image: url("/static/Elements/Stone_Background.svg");
   background-repeat: repeat;
   background-size: 30%;
